Fix horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 .max-width-wrapper {
   max-width: 768px;
   margin: auto;
+  padding: 0 24px
 }
 
 strong {
